--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                     <p class="subtitle">Level up your game. Break the code. Rule the digital world.</p>
                     <div class="cta-buttons">
                         <button class="btn btn-primary" id="powerBtn">ACTIVATE POWER</button>
-                        <a href="https://twitter.com/intent/tweet?text=Just%20discovered%20the%20ultimate%20GirlBoss%20energy%20%F0%9F%92%AA%F0%9F%8E%AE&url=" 
+                        <a href="https://x.com/girlbossonsol" 
                            class="btn btn-twitter" target="_blank" rel="noopener">
                             <svg class="twitter-icon" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                             </svg>
-                            SHARE ON X
+                            FOLLOW @GIRLBOSSONSOL
                         </a>
                     </div>
                 </div>
@@ -137,12 +137,19 @@
                 <h2 class="section-title">JOIN THE NETWORK</h2>
                 <p class="connect-text">Connect with fellow GirlBosses and amplify your digital presence</p>
                 <div class="social-links">
-                    <a href="https://twitter.com/intent/tweet?text=Joining%20the%20GirlBoss%20revolution%20%F0%9F%92%AA%F0%9F%8E%AE&url=" 
+                    <a href="https://x.com/girlbossonsol" 
                        class="social-btn twitter" target="_blank" rel="noopener">
                         <svg class="social-icon" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                         </svg>
-                        <span>TWEET YOUR POWER</span>
+                        <span>FOLLOW @GIRLBOSSONSOL</span>
+                    </a>
+                    <a href="https://twitter.com/intent/tweet?text=Just%20discovered%20the%20ultimate%20GirlBoss%20energy%20on%20@girlbossonsol%20%F0%9F%92%AA%F0%9F%8E%AE&url=" 
+                       class="social-btn twitter-share" target="_blank" rel="noopener">
+                        <svg class="social-icon" viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                        </svg>
+                        <span>SHARE THE POWER</span>
                     </a>
                 </div>
             </div>
