🐦 Update Twitter links to @GRILBOSS_sol - Change from @girlbossonsol

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
                             </svg>
                             BUY NOW (COMING SOON)
                         </button>
-                        <a href="https://x.com/girlbossonsol" 
+                        <a href="https://x.com/GRILBOSS_sol" 
                            class="btn btn-twitter" target="_blank" rel="noopener">
                             <svg class="twitter-icon" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                             </svg>
-                            FOLLOW @GIRLBOSSONSOL
+                            FOLLOW @GRILBOSS_SOL
                         </a>
                     </div>
                 </div>
@@ -157,12 +157,12 @@
                 <h2 class="section-title">JOIN THE NETWORK</h2>
                 <p class="connect-text">Connect with fellow GirlBosses and amplify your digital presence</p>
                 <div class="social-links">
-                    <a href="https://x.com/girlbossonsol" 
+                    <a href="https://x.com/GRILBOSS_sol" 
                        class="social-btn twitter" target="_blank" rel="noopener">
                         <svg class="social-icon" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
                         </svg>
-                        <span>FOLLOW @GIRLBOSSONSOL</span>
+                        <span>FOLLOW @GRILBOSS_SOL</span>
                     </a>
                     <a href="https://twitter.com/intent/tweet?text=Boss%20moves%20only%0AGreen%20on%20top%20white%20on%20bottom%20GirlBoss%20forever&url=" 
                        class="social-btn twitter-share" target="_blank" rel="noopener">
