🚀 Update CA address and enable BUY button - Now links to new Pump.fun GIRLBOSS token

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <div class="ca-display">
                         <div class="ca-label">CONTRACT ADDRESS (CA):</div>
                         <div class="ca-address-container">
-                            <span class="ca-address" id="caAddress">000000000000000000</span>
+                            <span class="ca-address" id="caAddress">FXQsivoDRQqsnD81rrZzMuYkcL2pHiH3bzZUFf1Vpump</span>
                             <button class="ca-copy-btn" id="copyCA" title="Copy to clipboard">
                                 <svg class="copy-icon" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
@@ -72,12 +72,12 @@
                     
                     <div class="cta-buttons">
                         <button class="btn btn-primary" id="powerBtn">ACTIVATE POWER</button>
-                        <button class="btn btn-buy disabled" id="buyBtn" disabled>
+                        <a href="https://pump.fun/coin/FXQsivoDRQqsnD81rrZzMuYkcL2pHiH3bzZUFf1Vpump" class="btn btn-buy" id="buyBtn" target="_blank" rel="noopener">
                             <svg class="buy-icon" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M7 18c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12L8.1 13h7.45c.75 0 1.41-.41 1.75-1.03L21.7 4H5.21l-.94-2H1zm16 16c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
                             </svg>
-                            BUY NOW (COMING SOON)
-                        </button>
+                            BUY NOW ON PUMP.FUN
+                        </a>
                         <a href="https://x.com/GRILBOSS_sol" 
                            class="btn btn-twitter" target="_blank" rel="noopener">
                             <svg class="twitter-icon" viewBox="0 0 24 24" fill="currentColor">
